# othello

./: .gitignore  Makefile.am  NEWS  README  THANKS  autogen.sh  config.status  configure.ac
cli/: Makefile.am  othello-cli.cpp
docs/: AIPluginWritingTutorial.muse  InstallationGuide.muse  Makefile.am  common.css  muse-init.el  publish
include/: Makefile.am
lib/: Makefile.am
lib/othello/: Makefile.am  board.cpp  board.hpp  configs.cpp  configs.hpp  game.cpp  game.hpp  intl.hpp  intl_config.cpp  intl_config.hpp  networkgame.hpp  networkgame_client.cpp  networkgame_server.cpp  observer.hpp  othello.pc.in  player.cpp  player.hpp  player_plugin.hpp  player_plugin_manager.cpp  player_plugin_manager.hpp
lib/pyothello/: Makefile.am  board.cpp  board.hpp  init.cpp  init.hpp  intl.cpp  intl.hpp  player.cpp  player.hpp  utility.cpp  utility.hpp
m4/: Makefile.am
players/: Makefile.am  lowai.cpp  lowai.hpp  lowai_plugin.cpp  python.cpp
players/python/: silverfish.py
po/: LINGUAS  POTFILES  POTFILES.in  gl.po  update.sh  zh_CN.po
wx/: Makefile.am  configmgr.cpp  configmgr.hpp  playerchoosedialog.cpp  playerchoosedialog.hpp  thememgr.cpp  thememgr.hpp  win32.rc  windowboardpainter.cpp  windowboardpainter.hpp  wxothello.cpp  wxothelloframe.cpp  wxothelloframe.hpp  wxothelloplayer.cpp  wxothelloplayer.hpp
wx/resources/: Makefile.am  frame.xrc  frame.xrc.msgs.c  update.sh
