SUBDIRS =  \
	include \
	lib \
	players \
	$(OTHELLO_CLI_SUBDIR) \
	$(OTHELLO_WX_SUBDIR) \
	po \
	docs \
	m4

MAINTAINERCLEANFILES = \
	$(srcdir)/aclocal.m4 \
	$(srcdir)/confdefs.h \
	$(srcdir)/config.guess \
	$(srcdir)/config.h.in \
	$(srcdir)/config.sub \
	$(srcdir)/configure \
	$(srcdir)/depcomp \
	$(srcdir)/install-sh \
	$(srcdir)/intltool-extract \
	$(srcdir)/intltool-merge \
	$(srcdir)/intltool-update \
	$(srcdir)/intltool-extract.in \
	$(srcdir)/intltool-merge.in \
	$(srcdir)/intltool-update.in \
	$(srcdir)/ltmain.sh \
	$(srcdir)/mkinstalldirs \
	$(srcdir)/Makefile.in \
	$(srcdir)/missing

MAINTAINERCLEANFILES += include/Makefile.in
MAINTAINERCLEANFILES += lib/Makefile.in
MAINTAINERCLEANFILES += players/Makefile.in
MAINTAINERCLEANFILES += cli/Makefile.in
MAINTAINERCLEANFILES += wx/Makefile.in
MAINTAINERCLEANFILES += wx/resources/Makefile.in
MAINTAINERCLEANFILES += wx/lib/othello/Makefile.in
MAINTAINERCLEANFILES += wx/lib/pyothello/Makefile.in
MAINTAINERCLEANFILES += po/Makefile.in
MAINTAINERCLEANFILES += docs/Makefile.in
MAINTAINERCLEANFILES += m4/Makefile.in

EXTRA_DIST = \
	intltool-extract.in intltool-merge.in intltool-update.in

