resourcesdir = $(OTHELLO_WX_DATADIR)
resources_DATA = \
	wxothello.png \
	wxothello.ico \
	frame.xrc

theme_defaultdir = $(OTHELLO_WX_DATADIR)/themes/default
theme_default_DATA = \
	default/background.png \
	default/white.png \
	default/black.png

theme_iagnodir = $(OTHELLO_WX_DATADIR)/themes/iagno
theme_iagno_DATA = \
	iagno/background.png \
	iagno/white.png \
	iagno/black.png

EXTRA_DIST = \
	$(resources_DATA) \
	$(theme_default_DATA) \
	$(theme_iagno_DATA)

